<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
   <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/volum_morman"
    />
    <Spinner 
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/volum_morman"
    />
    <TextView 
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:text="@string/seekbar1"
   />
    <SeekBar
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:layout_margin="10px"
   		android:id="@+id/seekbar1"
   		android:max="100"
   		android:progress="10"
   />
   <TextView 
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:text="@string/seekbar2"
   />
    <SeekBar
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:layout_margin="10px"
   		android:id="@+id/seekbar2"
   		android:max="100"
   		android:progress="10"
   />
   
    <TextView 
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:text="@string/seekbar3"
   />
    <SeekBar
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:layout_margin="10px"
   		android:id="@+id/seekbar3"
   		android:max="100"
   		android:progress="15"
   />
   <TextView 
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:text="@string/seekbar4"
   />
    <SeekBar
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:layout_margin="10px"
   		android:id="@+id/seekbar4"
   		android:max="100"
   		android:progress="65"
   />
	<TableLayout 
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:layout_alignParentTop="true"
    	>
    	<TableRow>
    	
    	<CheckBox android:id="@+id/checkbox_1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_column="1"
	        android:text="@string/chk_1" />
	    <TextView 
	   		android:layout_width="fill_parent"
	   		android:layout_height="wrap_content"
	   		android:text="                                    "
	   		android:layout_column="2"
	   />
	        
	    <Button android:text="@string/button_morman_add" 
	    		android:id="@+id/ButtonMorman" 
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content"
	    		android:layout_column="4"/>
    	</TableRow>
	</TableLayout>
</LinearLayout>
